--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "prestonrichey.com",
+  "name": "shaikhalid.github.io",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "homepage": "https://shaikhalid.github.io",
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build --verbose",
     "serve": "gatsby serve --verbose",
-    "deploy": "gatsby build && netlify deploy",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public",
     "clean": "gatsby clean"
   },
   "dependencies": {
@@ -50,7 +52,7 @@
   },
   "devDependencies": {
     "gatsby-cli": "^2.4.9",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^2.2.0",
     "netlify": "^1.2.0",
     "netlify-cli": "^2.15.0",
     "prettier": "^1.16.4"
